Agregar paquete modelo

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,12 +28,14 @@ dist.jar=${dist.dir}/IEE_CVV.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.iText-5.0.5.jar=C:\\Users\\USUARIO\\Downloads\\iText-5.0.5.jar
+file.reference.iText-5.0.5.jar-1=iText-5.0.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.iText-5.0.5.jar}
+    ${file.reference.iText-5.0.5.jar}:\
+    ${file.reference.iText-5.0.5.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
