--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,13 +29,15 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.iText-5.0.5.jar=C:\\Users\\USUARIO\\Downloads\\iText-5.0.5.jar
 file.reference.iText-5.0.5.jar-1=iText-5.0.5.jar
+file.reference.jcalendar-1.4.jar=/home/oliver/NetBeansProjects/jars/jcalendar-1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.iText-5.0.5.jar}:\
-    ${file.reference.iText-5.0.5.jar-1}
+    ${file.reference.iText-5.0.5.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
